is-libzip-sys/src/docs_zip.rs

pub const zip_source_cmd_ZIP_SOURCE_OPEN: zip_source_cmd = 0;
pub const zip_source_cmd_ZIP_SOURCE_READ: zip_source_cmd = 1;
pub const zip_source_cmd_ZIP_SOURCE_CLOSE: zip_source_cmd = 2;
pub const zip_source_cmd_ZIP_SOURCE_STAT: zip_source_cmd = 3;
pub const zip_source_cmd_ZIP_SOURCE_ERROR: zip_source_cmd = 4;
pub const zip_source_cmd_ZIP_SOURCE_FREE: zip_source_cmd = 5;
pub const zip_source_cmd_ZIP_SOURCE_SEEK: zip_source_cmd = 6;
pub const zip_source_cmd_ZIP_SOURCE_TELL: zip_source_cmd = 7;
pub const zip_source_cmd_ZIP_SOURCE_BEGIN_WRITE: zip_source_cmd = 8;
pub const zip_source_cmd_ZIP_SOURCE_COMMIT_WRITE: zip_source_cmd = 9;
pub const zip_source_cmd_ZIP_SOURCE_ROLLBACK_WRITE: zip_source_cmd = 10;
pub const zip_source_cmd_ZIP_SOURCE_WRITE: zip_source_cmd = 11;
pub const zip_source_cmd_ZIP_SOURCE_SEEK_WRITE: zip_source_cmd = 12;
pub const zip_source_cmd_ZIP_SOURCE_TELL_WRITE: zip_source_cmd = 13;
pub const zip_source_cmd_ZIP_SOURCE_SUPPORTS: zip_source_cmd = 14;
pub const zip_source_cmd_ZIP_SOURCE_REMOVE: zip_source_cmd = 15;
pub const zip_source_cmd_ZIP_SOURCE_RESERVED_1: zip_source_cmd = 16;
pub const zip_source_cmd_ZIP_SOURCE_BEGIN_WRITE_CLONING: zip_source_cmd = 17;
pub const zip_source_cmd_ZIP_SOURCE_ACCEPT_EMPTY: zip_source_cmd = 18;
pub const zip_source_cmd_ZIP_SOURCE_GET_FILE_ATTRIBUTES: zip_source_cmd = 19;
pub type zip_source_cmd = u32;
pub use self::zip_source_cmd as zip_source_cmd_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zip_source_args_seek {
    pub offset: zip_int64_t,
    pub whence: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_zip_source_args_seek() {
    assert_eq!(
        ::std::mem::size_of::<zip_source_args_seek>(),
        16usize,
        concat!("Size of: ", stringify!(zip_source_args_seek))
    );
    assert_eq!(
        ::std::mem::align_of::<zip_source_args_seek>(),
        8usize,
        concat!("Alignment of ", stringify!(zip_source_args_seek))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_source_args_seek>())).offset as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_source_args_seek),
            "::",
            stringify!(offset)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_source_args_seek>())).whence as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_source_args_seek),
            "::",
            stringify!(whence)
        )
    );
}
pub type zip_source_args_seek_t = zip_source_args_seek;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zip_error {
    pub zip_err: ::std::os::raw::c_int,
    pub sys_err: ::std::os::raw::c_int,
    pub str_: *mut ::std::os::raw::c_char,
}
#[test]
fn bindgen_test_layout_zip_error() {
    assert_eq!(
        ::std::mem::size_of::<zip_error>(),
        16usize,
        concat!("Size of: ", stringify!(zip_error))
    );
    assert_eq!(
        ::std::mem::align_of::<zip_error>(),
        8usize,
        concat!("Alignment of ", stringify!(zip_error))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_error>())).zip_err as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_error),
            "::",
            stringify!(zip_err)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_error>())).sys_err as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_error),
            "::",
            stringify!(sys_err)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_error>())).str_ as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_error),
            "::",
            stringify!(str_)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zip_stat {
    pub valid: zip_uint64_t,
    pub name: *const ::std::os::raw::c_char,
    pub index: zip_uint64_t,
    pub size: zip_uint64_t,
    pub comp_size: zip_uint64_t,
    pub mtime: time_t,
    pub crc: zip_uint32_t,
    pub comp_method: zip_uint16_t,
    pub encryption_method: zip_uint16_t,
    pub flags: zip_uint32_t,
}
#[test]
fn bindgen_test_layout_zip_stat() {
    assert_eq!(
        ::std::mem::size_of::<zip_stat>(),
        64usize,
        concat!("Size of: ", stringify!(zip_stat))
    );
    assert_eq!(
        ::std::mem::align_of::<zip_stat>(),
        8usize,
        concat!("Alignment of ", stringify!(zip_stat))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_stat>())).valid as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_stat),
            "::",
            stringify!(valid)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_stat>())).name as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_stat),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_stat>())).index as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_stat),
            "::",
            stringify!(index)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_stat>())).size as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_stat),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_stat>())).comp_size as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_stat),
            "::",
            stringify!(comp_size)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_stat>())).mtime as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_stat),
            "::",
            stringify!(mtime)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_stat>())).crc as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_stat),
            "::",
            stringify!(crc)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_stat>())).comp_method as *const _ as usize },
        52usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_stat),
            "::",
            stringify!(comp_method)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_stat>())).encryption_method as *const _ as usize },
        54usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_stat),
            "::",
            stringify!(encryption_method)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_stat>())).flags as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_stat),
            "::",
            stringify!(flags)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zip_buffer_fragment {
    pub data: *mut zip_uint8_t,
    pub length: zip_uint64_t,
}
#[test]
fn bindgen_test_layout_zip_buffer_fragment() {
    assert_eq!(
        ::std::mem::size_of::<zip_buffer_fragment>(),
        16usize,
        concat!("Size of: ", stringify!(zip_buffer_fragment))
    );
    assert_eq!(
        ::std::mem::align_of::<zip_buffer_fragment>(),
        8usize,
        concat!("Alignment of ", stringify!(zip_buffer_fragment))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_buffer_fragment>())).data as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_buffer_fragment),
            "::",
            stringify!(data)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_buffer_fragment>())).length as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_buffer_fragment),
            "::",
            stringify!(length)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zip_file_attributes {
    pub valid: zip_uint64_t,
    pub version: zip_uint8_t,
    pub host_system: zip_uint8_t,
    pub ascii: zip_uint8_t,
    pub version_needed: zip_uint8_t,
    pub external_file_attributes: zip_uint32_t,
    pub general_purpose_bit_flags: zip_uint16_t,
    pub general_purpose_bit_mask: zip_uint16_t,
}
#[test]
fn bindgen_test_layout_zip_file_attributes() {
    assert_eq!(
        ::std::mem::size_of::<zip_file_attributes>(),
        24usize,
        concat!("Size of: ", stringify!(zip_file_attributes))
    );
    assert_eq!(
        ::std::mem::align_of::<zip_file_attributes>(),
        8usize,
        concat!("Alignment of ", stringify!(zip_file_attributes))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_file_attributes>())).valid as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_file_attributes),
            "::",
            stringify!(valid)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_file_attributes>())).version as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_file_attributes),
            "::",
            stringify!(version)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_file_attributes>())).host_system as *const _ as usize },
        9usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_file_attributes),
            "::",
            stringify!(host_system)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_file_attributes>())).ascii as *const _ as usize },
        10usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_file_attributes),
            "::",
            stringify!(ascii)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<zip_file_attributes>())).version_needed as *const _ as usize
        },
        11usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_file_attributes),
            "::",
            stringify!(version_needed)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<zip_file_attributes>())).external_file_attributes as *const _
                as usize
        },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_file_attributes),
            "::",
            stringify!(external_file_attributes)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<zip_file_attributes>())).general_purpose_bit_flags as *const _
                as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_file_attributes),
            "::",
            stringify!(general_purpose_bit_flags)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<zip_file_attributes>())).general_purpose_bit_mask as *const _
                as usize
        },
        18usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_file_attributes),
            "::",
            stringify!(general_purpose_bit_mask)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zip {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zip_file {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zip_source {
    _unused: [u8; 0],
}
